# anki-gen

./: .env.example  .gitignore  README.md  agents.md  lin-regression.md  pyproject.toml
anki_gen/: __init__.py  ankiconnect.py  cli.py  confirm.py  exporter.py  generator.py  latex.py  mcp_server.py  models.py  parser.py
anki_gen/llm/: anthropic.py  base.py  openai.py
tests/: test_chunking.py  test_confirm_images.py  test_context_budget.py  test_frontmatter.py  test_image_parsing.py  test_inject_images.py  test_rendering.py
